Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <em>My</em> Hobbys:
 </h4>
 <ul>
-    <li>Koken</li>
-    <li>Rolschaatsen</li>
-    <li>Tennis</li>
+    <li><a href="https://nl.wikipedia.org/wiki/Kookkunst">Koken</a></li>
+    <li><a href="https://nl.wikipedia.org/wiki/Rolschaats">Rolschaatsen</a></li>
+    <li><a href="https://nl.wikipedia.org/wiki/Tennis">Tennis</a></li>
 </ul>
 </p>
 
