Uitwerking van de exercise

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<title>Keyingewebsite</title>    
 <h1>
     <p>Inge</p>
 </h1>
-
-<p>
-    <title>Keyingewebsite</title>
-</p>
 
 <p>
 <h4>
@@ -40,6 +41,10 @@ alt="This Is Rihanna"
 width="300"
 height="300">
 </p>
+
+</body>
+</html>
+
 
 
 
